# OpenGL-course

cmake_project_example/: CMakeLists.txt  Dependency.cmake  README.md
first_opengl_example/: CMakeLists.txt
first_opengl_example/src/: main.cpp
opengl_example/: CMakeLists.txt  Dependency.cmake
opengl_example/shader/: simple.fs  simple.vs
opengl_example/src/: buffer.cpp  buffer.h  common.cpp  common.h  context.cpp  main.cpp  program.cpp  program.h  shader.cpp  shader.h  vertex_layout.cpp  vertex_layout.h
